--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "@types/mssql": "^9.1.5",
     "@types/node": "22.7.9",
+    "aws-cdk": "2.173.0",
+    "aws-cdk-lib": "^2.173.0",
+    "constructs": "^10.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.173.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.173.0",
-    "constructs": "^10.0.0"
+    "@aws-sdk/client-s3": "^3.715.0",
+    "@aws-sdk/client-secrets-manager": "^3.714.0",
+    "mssql": "^11.0.1"
   }
 }
